--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Songs</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -85,13 +85,7 @@
       // Set interval to change the image every 5 seconds (5000 milliseconds)
       setInterval(changeBackgroundImage, 5000);
 
-      // Hide the welcome overlay after the animation is complete
-      const welcomeOverlay = document.querySelector(".welcome-overlay");
-      setTimeout(function () {
-        welcomeOverlay.classList.add("hidden");
-      }, 7000); // Adjust the time (in milliseconds) to match the duration of your animation
-    });
-  </script>
+   
 
 </body>
 </html>
