--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
 
       // Set interval to change the image every 5 seconds (5000 milliseconds)
       setInterval(changeBackgroundImage, 5000);
+ });
+  </script>
+
+  <script>
+    // Your JavaScript code remains unchanged
+  </script>
 
    
 
