--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Songs</title>
+  <title>Songs which reminds me of u</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
