--- a/index.html
+++ b/index.html
@@ -83,7 +83,12 @@
     // Your JavaScript code remains unchanged
   </script>
 
-   
+   <div class="welcome-overlay hidden" id="welcomeOverlay">
+  <div class="welcome-content">
+    <img src="path-to-your-image.png" alt="Welcome Image">
+  </div>
+</div>
+
 
 </body>
 </html>
