--- a/index.html
+++ b/index.html
@@ -74,20 +74,14 @@
       setInterval(changeBackgroundImage, 5000);
  });
   </script>
-<div class="welcome-overlay">
-  <div class="welcome-content">
-    <!-- Add your welcome animation here -->
-    <img src="https://i.pinimg.com/originals/1e/3e/37/1e3e3738d81b9db4f6b6505b236a996a.gif" alt="Welcome Animation">
-  </div>
-  <script>
-    // Your JavaScript code remains unchanged
-  </script>
 
-   <div class="welcome-overlay hidden" id="welcomeOverlay">
+  
+<script><div class="welcome-overlay hidden" id="welcomeOverlay">
   <div class="welcome-content">
-    <img src="path-to-your-image.png" alt="Welcome Image">
+    <img src="https://i.pinimg.com/originals/1e/3e/37/1e3e3738d81b9db4f6b6505b236a996a.gif" alt="Welcome animation">
   </div>
-</div>
+</div></script>
+   
 
 
 </body>
